--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,15 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <!--Terminaciones-->
+    <string name="tLuc">Luces"</string>
+    <string name="tDorm">Elementos de dormitorio</string>
+    <string name="tCoc">Elementos de cocina</string>
+    <string name="tBa">Elementos de baño</string>
+    <string name="tMAla">Mala</string>
+    <string name="tReg">Regular</string>
+    <string name="tNorm">Normal</string>
+
+    <string name="btnGuardar">Guardar</string>
+
 </resources>
