--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
 <resources>
     <string name="app_name">Check Apartament</string>
     <string name="lblLogin">Login</string>
-    <string name="txtUsr">Correo Electronico</string>
+    <string name="txtEmail">Correo Electronico</string>
     <string name="txtPass">Contraseña</string>
     <string name="btnLogin">Ingresar</string>
+    <string name="title_activity_list">ListActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
